--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
-
-.App-header {
+*/ .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
